--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /* Logo */
 /* Adapted from Zachary Blackwood */
 [data-testid="stSidebar"] {
-                background-image: url(https://streamlit.io/images/brand/streamlit-logo-secondary-colormark-darktext.png);
-                background-size: 200px;
-                background-repeat: no-repeat;
-                background-position: 4px 20px;
-            }
+  background-image: url(https://drive.google.com/uc?export=view&id=10fXwlPfmUsBRz9ewyKXfqkqoPcSNrCQY&rl);
+  background-size: 200px;
+  background-repeat: no-repeat;
+  background-position: 4px 20px;
+}
+
 
 
 /* Card */
